<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/feedback_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_close_feedback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:background="@color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_close_24" />
    </LinearLayout>
    <ScrollView
        android:layout_gravity=""
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <LinearLayout
            android:id="@+id/layout_main_feedback"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingBottom="20dp"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/feedback_video_desc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radioGroupOptionFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radio_outline_selector"
                    android:fontFamily="sans-serif"
                    android:layoutDirection="rtl"
                    android:padding="14dp"
                    android:text="@string/feedback_video_option1" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radio_outline_selector"
                    android:fontFamily="sans-serif"
                    android:layoutDirection="rtl"
                    android:padding="14dp"
                    android:text="@string/feedback_video_option2" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radio_outline_selector"
                    android:fontFamily="sans-serif"
                    android:layoutDirection="rtl"
                    android:padding="14dp"
                    android:text="@string/feedback_video_option3" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radio_outline_selector"
                    android:fontFamily="sans-serif"
                    android:layoutDirection="rtl"
                    android:padding="14dp"
                    android:text="@string/feedback_video_option4" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radio_outline_selector"
                    android:fontFamily="sans-serif"
                    android:layoutDirection="rtl"
                    android:padding="14dp"
                    android:text="@string/feedback_video_option5" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radio_outline_selector"
                    android:fontFamily="sans-serif"
                    android:layoutDirection="rtl"
                    android:padding="14dp"
                    android:text="@string/feedback_video_option6" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/layout_content_feedback_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/feedback_video_content"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/feedback_video_content"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="100">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLength="100"
                        android:padding="4dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/feedback"
                app:backgroundTint="@color/gray" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>