<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:orientation="vertical"
    app:flow_horizontalAlign="center"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/title_3_forgetpasswd"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:alpha="0"
        android:background="#00FFFFFF"
        android:scaleX="0.6"
        android:src="@drawable/module1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/txt_31_forgetpasswd"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:helperTextEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray"
        android:layout_marginBottom="12dp"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/border_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:hint=""
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/txt_32_forgetpasswd"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:helperTextEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray"
        android:layout_marginBottom="12dp"
        >

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/border_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:hint=""
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confimr_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_blue"
        android:backgroundTint="@color/bg_btn"
        android:fontFamily="@font/almarai"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />
</LinearLayout>